crates/solidity/testing/snapshots/bindings_output/user_types/in_library/generated/0.4.22-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or CloseBrace or ConstructorKeyword or EnumKeyword or EventKeyword or FixedKeyword or FunctionKeyword or Identifier or IntKeyword or MappingKeyword or ModifierKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword or UsingKeyword.
    ╭─[input.sol:8:5]
    │
  8 │ ╭─▶     type LibType is int32;
    ┆ ┆   
 12 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function test() public returns (int32) {
   │              ──┬─  
   │                ╰─── name: 2
 3 │         return MyLib.LibType.unwrap(MyLib.create());
   │                ──┬── ───┬─── ───┬── ──┬── ───┬──  
   │                  ╰──────────────────────────────── ref: 3
   │                         │       │     │      │    
   │                         ╰───────────────────────── unresolved
   │                                 │     │      │    
   │                                 ╰───────────────── unresolved
   │                                       │      │    
   │                                       ╰─────────── ref: 3
   │                                              │    
   │                                              ╰──── unresolved
   │ 
 7 │ library MyLib {
   │         ──┬──  
   │           ╰──── name: 3
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │   ╭─│ ▶ contract Test {
  2 │   │ ╭─▶     function test() public returns (int32) {
    ┆   ┆ ┆   
  4 │   │ ├─▶     }
    │   │ │           
    │   │ ╰─────────── definiens: 2
  5 │ │ ├───▶ }
    │ │ │         
    │ │ ╰───────── definiens: 1
  6 │ ╭─────▶ 
    ┆ ┆       
 13 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 3
────╯
